Closed Bug 1760184 Opened 3 years ago Closed 3 years ago

[Wayland] Correction for anchorRect.width < 0 is not applied

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox100 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(1 file)

Correction for anchorRect.width < 0 is not applied. It was introduced in Bug 1739383 (https://phabricator.services.mozilla.com/D130384).

Depends on: 1760179
No longer depends on: 1759157
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/269c86188fa9 [Wayland] Apply correction for negative anchor width r=emilio
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: