Bug 1760184 [Wayland] Apply correction for negative anchor width r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D141433